<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">nthLink</string>
    <string name="percentage" translatable="false">%d %%</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel" translatable="false">Cancel</string>

    <string name="privacy_notice_submit">Accept and continue</string>

    <string name="connection_label_connect">Connect</string>
    <string name="connection_label_disconnect">Disconnect</string>
    <string name="connection_server_state_initializing">Initializing…</string>
    <string name="connection_server_state_connecting">Connecting…</string>
    <string name="connection_server_state_disconnecting">Disconnecting…</string>

    <string name="feedback_page_title">Feedback</string>
    <string name="feedback_issue_category_title">Issue category</string>
    <string name="feedback_email_title" translatable="false">Email</string>
    <string name="feedback_description_title">Description</string>
    <string name="feedback_note_text">Your description, email address (if provided), and additional information will be sent to the nthLink team. Please refer to the nthLink website’s Privacy Policy for our data collection policy.</string>
    <string name="feedback_submit">Send</string>
    <string name="feedback_submit_failed_message">Can’t connect to nthlink server.</string>
    <string name="feedback_submit_success_message">Thanks for helping us improve! We love hearing from you.</string>

    <string name="about_page_title">About</string>
    <string name="about_version">Version %s</string>
    <string name="about_text">We are a group of experienced software and information security engineers who started nthLink in 2016 to support human rights lawyers who needed to obtain restricted information and to express their perspectives. Since then we’ve made the service available to the wider public. Our development team are experts in both network security technology and service reliability.\n\nOur service is free and will remain free thanks to our sponsors and partners. They are:\n• Open Technology Fund\n• Google Jigsaw\n• Cure53\n• Include Security\n• Plaintext Design\n\nOur development team excels in both the sophistication of censorship circumvention technology and the reliability of the service. With years of experience in this specialty area, we provide the users in targeted geographies simple, safe, and reliable access to otherwise censored information.</string>

    <string name="menu_drawer_item_1">Connect</string>
    <string name="menu_drawer_item_2">@string/feedback_page_title</string>
    <string name="menu_drawer_item_3">@string/about_page_title</string>
    <string name="menu_drawer_item_4">Help</string>
    <string name="menu_drawer_item_5">Rate App</string>

    <string name="menu_web_item_1">Copy link</string>
    <string name="menu_web_item_2">Open in browser</string>
    <string name="menu_web_item_3">Share link</string>

    <string name="menu_connection_item_1">Landing Page</string>

    <string name="word_loading">Loading</string>
    <string name="word_copied_link">Copied link</string>

    <string-array name="issue_categories">
        <item>General feedback</item>
        <item>Cannot connect</item>
        <item>Connection speed is slow</item>
        <item>Suggestions</item>
        <item>Other</item>
    </string-array>

    <string name="error_title" translatable="false">Oops…</string>
    <string name="error_no_permission" translatable="false">We need permission to start VPN.</string>
    <string name="error_no_internet" translatable="false">Unstable network. Please check your internet connection.</string>
    <string name="error_directory_server" translatable="false">We are experiencing issues with the Directory Server. Please try again later or contact customer service.</string>
    <string name="error_invalid_config" translatable="false">Invalid configuration. Please contact customer service.</string>
    <string name="error_no_proxy_available" translatable="false">No VPN server is available for your region. Please contact customer service.</string>
    <string name="error_vpn_service" translatable="false">We are experiencing issues with the VPN Service. Please contact customer service.</string>

    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_link" translatable="false"><u>Privacy Policy</u></string>
    <string name="privacy_policy_content" translatable="false">nthLink does not collect personally identifiable information and does not track which websites or online services you visit. nthLink may use your IP address, your device’s default language, cookies, and basic information on your operating system information (Android or iOS) to customize the services that you receive. This allows us to locate the nearest servers that can best support your device.</string>
    <string name="terms_of_use_content" translatable="false">By accessing, downloading, or using nthLink, you are agreeing to the terms of services below. The Agreement is a binding contract between you and nthLink regarding your use of nthLink.\n\n<b>License.</b> nthLink is made available by nthLink under the Apache 2.0 license.\n<b>Assumption of Risk.</b> You may use nthLink and invite others to use nthLink only as permitted by law. We encourage you to check local laws and regulations before using nthLink.\n<b>Your content.</b> Content that you upload, submit, store, send or receive through nthLink Servers (“Your Content”) is not uploaded or submitted to nthLink. We do not know what you are sending with nthLink.\n<b>Copyright notices.</b> nthLink does not host or store any content that you access through nthLink Servers. Any notices of alleged copyright infringement or other legal notices relating to content hosted, stored, sent or received via nthLink Servers should be dealt with by you or directed to your Service Provider.</string>

    <string name="url_faq">https://www.nthlink.com/#faq</string>
    <string name="url_policies">https://nthlink.com/policies/</string>

    <string name="download">Download</string>
    <string name="url_download" translatable="false">https://www.downloadnth.com/download.html</string>

    <string name="telegram_id_label" translatable="false">Telegram ID:</string>
    <string name="telegram_id" translatable="false">\@nthLinkVPN</string>
    <string name="copied">Copied</string>
    <string name="copied_telegram_id">Please paste ID on Telegram.</string>

    <string name="update">Update</string>
    <string name="update_is_up_to_date">Your app is up to date.</string>
    <string name="update_canceled">The update is canceled</string>
    <string name="update_has_new_apk">There is a new version of nthlink. Would you like to download?</string>
    <string name="download_update">Download update</string>
    <string name="downloading_update">We’re downloading updates in the background.\nYou can keep using other apps while we finish up!</string>

    <string name="update_download_complete">Download complete!\nTo update nthLink, open the Files app, find the latest nthLink APK, and tap it to install.</string>
    <string name="open_files_app">Open the Files app</string>

    <string name="something_went_wrong">Something went wrong. Please try it again.</string>

    <string name="follow_us">Follow Us</string>
    <string name="visit">Visit</string>

    <string name="facebook" translatable="false">Facebook</string>
    <string name="fb_en_label" translatable="false">English: nthLink VPN</string>
    <string name="fb_zh_label" translatable="false">中文: CNnthLink</string>
    <string name="fb_fa_label" translatable="false"> فارسی: NthLinkIR</string>
    <string name="fb_ru_label" translatable="false">Русский: NthLinkRU</string>
    <string name="fb_my_label" translatable="false"> မြန်မာ: NthLinkMM</string>
    <string name="fb_es_label" translatable="false">Español: NthlinkES</string>

    <string name="instagram" translatable="false">Instagram</string>
    <string name="ig_en_label" translatable="false">English: nthlink_vpn</string>
    <string name="ig_zh_label" translatable="false">中文: cn_nthlink</string>
    <string name="ig_fa_label" translatable="false"> فارسی: ir_nthlink</string>
    <string name="ig_ru_label" translatable="false">Русский: ru_nthlink</string>
    <string name="ig_my_label" translatable="false"> မြန်မာ: mm_nthlink</string>
    <string name="ig_es_label" translatable="false"> Español: es_nthlink</string>

    <string name="youtube_id_label" translatable="false">Youtube: @nthLinkApp</string>

    <string name="diagnostic">Diagnostic</string>
    <string name="start_diagnostics">Start Diagnostics</string>
    <string name="diagnostic_description">At nthLink, we occasionally seek your assistance in enhancing our service by providing diagnostic data.\n\nBy clicking the button, the diagnostics process begins, collecting information and transmitting it to our servers. Rest assured, all information gathered is completely anonymous.</string>
    <string name="diagnostic_disconnect_alert">Starting diagnostics will disconnect the current connection.\n\nAre you sure you want to proceed?</string>
    <string name="diagnostic_copy_report_id">Copy the report ID</string>

    <string name="kill_switch" translatable="false">Kill Switch</string>
    <string name="kill_switch_dialog_description">This action will open the VPN settings. Do you want to continue?\n\nAfter clicking \"OK\", tap the gear icon next to nthlink to enable \"Always-on VPN\" and \"Block connections without VPN.\"\n\nPlease make sure to connect to nthlink at least once to ensure that the system displays the VPN app correctly.</string>
</resources>