<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/eggshell_white">

    <androidx.cardview.widget.CardView
        android:id="@+id/privacy_submit_card"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/eggshell_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/privacy_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/distance_20_dp"
            android:paddingTop="@dimen/distance_16_dp"
            android:paddingBottom="@dimen/distance_16_dp"
            android:text="@string/privacy_notice_submit"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            app:cornerRadius="@dimen/distance_18_dp" />

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/match_constraint"
        android:layout_margin="@dimen/distance_32_dp"
        android:fadeScrollbars="false"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@id/privacy_submit_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/work_sans_normal"
                android:text="@string/privacy_policy"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distance_12_dp"
                android:fontFamily="@font/work_sans_normal"
                android:lineSpacingExtra="@dimen/distance_10_dp"
                android:text="@string/privacy_policy_content"
                android:textColor="@color/black"
                android:textSize="@dimen/font_20_sp" />

            <TextView
                android:id="@+id/privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distance_12_dp"
                android:fontFamily="@font/work_sans_normal"
                android:lineSpacingExtra="@dimen/distance_10_dp"
                android:text="@string/privacy_policy_link"
                android:textColor="@color/link_text"
                android:textSize="@dimen/font_20_sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distance_20_dp"
                android:fontFamily="@font/work_sans_normal"
                android:text="Terms of Use"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distance_12_dp"
                android:fontFamily="@font/work_sans_normal"
                android:lineSpacingExtra="@dimen/distance_10_dp"
                android:text="@string/terms_of_use_content"
                android:textColor="@color/black"
                android:textSize="@dimen/font_20_sp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>